--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
